# trusty-notes

./: .dockerignore  .gitignore  Dockerfile  PRIVACY.md  README.md  SELF_HOSTING.md  build-extension.sh  bun.lockb  capacitor.config.json  capacitor.config.ts  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
android/: build.gradle  capacitor.settings.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/capacitor-cordova-android-plugins/: build.gradle
browser-extension/: background.js  build.js  content.js  manifest.chrome.json  manifest.firefox.json
browser-extension/popup/: popup.css  popup.html  popup.js  sync.js
browser-extension/scripts/: getStorageData.js
browser-extension/services/: cryptoService.js
browser-extension/tests/: test.js
desktop/: build.js  bun.lockb  main.js  package.json  preload.js
docs/: vim.md
ios/: altstore-source.json
ios/App/: Podfile
public/: offline.html  robots.txt  site.webmanifest  sitemap.xml
scripts/: generate-android-icons.js
server/: .dockerignore  Dockerfile  bun.lockb  docker-compose.yml  mongo-init.js  package-lock.json  package.json
server/src/: index.js
src/: App.css  App.tsx  main.tsx  polyfills.ts  service-worker.js  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  lib.rs  main.rs  sync.rs  types.rs
src/components/: InstallPrompt.tsx  MarkdownEditor.tsx  MobileNav.tsx  NoteEditor.tsx  RichTextEditor.tsx  SyncProgress.tsx  SyncSettings.tsx  SyncSetup.tsx
(+48 files in other folders)
